# learn_render3d

./: CMakeLists.txt
assets/shaders/: 2d.frag  2d.vert  my3d.frag  my3d.vert
cmake/: Libraries.cmake
src/: Mesh.cpp  Mesh.h  Mesh3d.cpp  Mesh3d.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
src/oldMeshAndEntityClasses/: CubeWithNormals.cpp  CubeWithNormals.h  Entity3dFromModel.cpp  Entity3dFromModel.h  Mesh2D.cpp  Mesh2D.h  Mesh3dFromModel.cpp  Mesh3dFromModel.h
